force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>Billable or internal delivery project for cost development tracking.</description>
    <label>CD Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CD Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>