force-app/main/default/objects/Project__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer or internal account this project belongs to.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CD Projects</relationshipLabel>
    <relationshipName>CD_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>