force-app/main/default/objects/Project__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Inactive projects can be hidden from pickers in later versions.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>