force-app/main/default/objects/Project__c/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <description>Offering type used when resolving labor rates for time on this project.</description>
    <label>Offering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Offering</valueSetName>
    </valueSet>
</CustomField>