force-app/main/default/objects/Project__c/validationRules/Offering_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Offering_Required</fullName>
    <active>true</active>
    <description>Offering is required for rate resolution and reporting.</description>
    <errorConditionFormula>ISBLANK(TEXT(Offering__c))</errorConditionFormula>
    <errorDisplayField>Offering__c</errorDisplayField>
    <errorMessage>Select an offering for this project.</errorMessage>
</ValidationRule>